--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -1,27 +1,27 @@
 # 安装Ubuntu 14.10后要做的几件事
 ## 基础配置
-**更新软件源**
-**linux打开txt文件乱码**
-**开机时自动加载Windows分区**
-**安装搜狗输入法**
-**远程管理Ubuntu主机**
-**基础软件推荐使用**
-* WPS for Linux 
-* Smplayer+VLC
-* Google Chrome+Chrome App Launcher
-* Xmind思维导图
-
+* **更新软件源**
+* **linux打开txt文件乱码**
+* **开机时自动加载Windows分区**
+***安装搜狗输入法**
+***远程管理Ubuntu主机**
+* **基础软件推荐使用**
+1. WPS for Linux 
+2. Smplayer+VLC
+3. Google Chrome+Chrome App Launcher
+4. Xmind思维导图
+5. 其他软件
 
 
 
 
 ## 开发环境
-**完善GCC/Python环境**
-**配置Vim**
-**安装GAE**
-**解决Sublime text3无法输入中文的问题**
-**安装Eclipse**
-**Node.js开发部署集成测试管理**
-**Python开发管理**
-**Docker使用入门**
+* **完善GCC/Python环境**
+* **配置Vim**
+* **安装GAE**
+* **解决Sublime text3无法输入中文的问题**
+* **安装Eclipse**
+* **Node.js开发部署集成测试管理**
+* **Python开发管理**
+* **Docker使用入门**
 
