--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -21,7 +21,168 @@
 * **安装GAE**
 * **解决Sublime text3无法输入中文的问题**
 * **安装Eclipse**
+
 * **Node.js开发部署集成测试管理**
+
+**1 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
+
+```
+   tar -zxvf node-latest.tar.gz 
+   rm -f node-latest.tar.gz 
+   cd node-v* 
+  ./configure 
+  make 
+  sudo make install 
+```
+Node.js安装时默认安装了npm,查看两者是否安装成功
+```
+charles@charles-t400s:~$ node --version
+v0.10.33
+charles@charles-t400s:~$ npm --version
+1.4.28
+```
+**2  Yeoman & Grunt & Bower **
+**[Yeoman](http://yeoman.io/)** : 使用Web开发的最佳实践方式，为开发者提供一系列健壮的工具、程序库和工作流，帮助他们快速构建出漂亮、引人注目的Web应用。
+
+它能够解决哪些前端问题呢？
+> 统一开发团队代码风格和开发规范
+> 维护和使用开发的组件库
+> 模块化前端项目
+> 服务器部署前是否压缩？流程如何简化
+
+它不仅是一个工具，而且也是一个工作流。它由三种核心工具组成，致力于提高你构建Web App时的生产力和满意度，分别是：
+- **[Yo](https://github.com/yeoman/yo)** ：脚手架工具，用于搭建新应用的脚手架，编写你的Grunt配置，提交相关Grunt任务，创建你需要的Bower库依赖
+- **[Grunt](http://gruntjs.com/)** ：任务构建工具，用于自动化处理诸如代码最小化，代码编译，单元测试，代码规范等重复性任务
+- **[Bower](http://bower.io/)** ：包管理工具，用于包依赖管理，无需手动下载和管理你的脚本，用它可以对库进行搜索,自动安装，检查更新，确保依赖关系等，管理Web站点的各种资源，比如框架，库，公共部分等
+
+统一安装：`sudo npm install -g yo bower grunt-cli karma-jasmine `
+
+检查是否安装成功：
+```
+charles@charles-t400s:~$ yo -v
+1.3.3
+charles@charles-t400s:~$ bower -v
+1.3.12
+charles@charles-t400s:~$ grunt -v
+grunt-cli: The grunt command line interface. (v0.1.13)
+
+Fatal error: Unable to find local grunt.
+
+If you're seeing this message, either a Gruntfile wasn't found or grunt
+hasn't been installed locally to your project. For more information about
+installing and configuring grunt, please see the Getting Started guide:
+
+http://gruntjs.com/getting-started
+# 这里需要定位到含Gruntfile的项目目录下才调用运行已经安装好的Grunt
+# 添加Grunt和插件到现有的一个package.json,在root模式下在项目目录中本地安装module
+# Karma是一个基于Node.js的JavaScript测试执行过程管理工具（Test Runner）。
+# Karma可用于测试所有主流Web浏览器，也可集成到CI（Continuous integration）工具
+# Jasmine是一款 JavaScript BDD（行为驱动开发）测试框架
+# Jasmine不依赖于其他任何JavaScript组件，有干净清晰的语法，可以很简单的写出测试代码。
+sudo npm install grunt --save-dev
+```
+**3 创建一个Angular Web项目**
+
+A. 安装生成器和搭建脚手架
+```
+sudo apt-get install ruby ruby-compass # root模式下安装ruby和compass
+sudo npm install -g generator-angular #安装angular生成器
+mkdir angular-hello  #创建项目文件夹
+yo angular webapp   # 搭建一个AngularJs应用程序的脚手架
+```
+B. 安装库依赖- npm,bower
+```
+rm -rf node-modules/  #上面步骤有部分库没装成功，需要root权限，因而需重新安装
+sudo npm install   #安装默认依赖
+sudo npm install grunt-karma karma-phantomjs-launcher karma-jasmine --save-dev
+```
+
+```
+bower install && bower install underscore #根据所需从bower中安装库
+bower install --save-dev xxx
+```
+
+C. Grunt自动化任务
+```
+sudo npm install grunt --save-dev   #把新版Grunt到你的项目中，并自动添加到你的项目依赖
+grunt test   #测试你的应用
+grunt serve  #预览你的应用
+grunt        #部署构建你的应用
+```
+
+**4 持续集成平台-Travis** 
+**5 线上部署应用-Heroku**
+Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
+
+一.  常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
+
+A. 注册Heroku，下载Heroku工具包：
+
+```
+wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
+```
+
+B. 登陆Heroku并在项目目录执行：
+```
+charles@charles-t400s:~/node-hello$ heroku login
+Enter your Heroku credentials.
+Email: haojun.xiong2010@gmail.com
+Password (typing will be hidden): 
+Authentication successful.
+
+charles@charles-t400s:~/node-hello$ heroku create
+Creating hidden-inlet-5897... done, stack is cedar-14
+https://hidden-inlet-5897.herokuapp.com/ | https://git.heroku.com/hidden-inlet-5897.git
+Git remote heroku added
+
+```
+
+C. 创建一个Procfile并把本地的master分支推送到heroku这个远端地址
+
+Profile的内容：
+```
+web: node index.js
+```
+
+推送部署到Heroku中：
+```
+charles@charles-t400s:~/node-hello$ git remote -v    #查看远程库
+heroku	https://git.heroku.com/hidden-inlet-5897.git (fetch)
+heroku	https://git.heroku.com/hidden-inlet-5897.git (push)
+origin	git@github.com:charlesxiong/node-hello (fetch)
+origin	git@github.com:charlesxiong/node-hello (push)
+
+charles@charles-t400s:~/node-hello$ git push heroku master
+Counting objects: 29, done.
+Delta compression using up to 2 threads.
+Compressing objects: 100% (26/26), done.
+Writing objects: 100% (29/29), 3.03 KiB | 0 bytes/s, done.
+Total 29 (delta 10), reused 3 (delta 0)
+remote: Compressing source files... done.
+remote: Building source:
+remote: 
+remote: -----> Node.js app detected
+remote: ....
+remote:        Procfile declares types -> web
+remote: 
+remote: -----> Compressing... done, 5.7MB
+remote: -----> Launching... done, v3
+remote:        https://hidden-inlet-5897.herokuapp.com/ deployed to Heroku
+remote: 
+remote: Verifying deploy... done.
+To https://git.heroku.com/hidden-inlet-5897.git
+ * [new branch]      master -> master
+```
+
+D. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/或者执行`heroku open`
+
+
+二. 部署一个Yeoman/Angular App到Heroku中
+
+**6 集大成者：开发测试部署运维自动化-Docker**
+
+
+
 * **Python开发管理**
 * **Docker使用入门**
 
