--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -42,13 +42,15 @@ charles@charles-t400s:~$ npm --version
 1.4.28
 ```
 **2  Yeoman & Grunt & Bower **
+
 **[Yeoman](http://yeoman.io/)** : 使用Web开发的最佳实践方式，为开发者提供一系列健壮的工具、程序库和工作流，帮助他们快速构建出漂亮、引人注目的Web应用。
 
 它能够解决哪些前端问题呢？
 > 统一开发团队代码风格和开发规范
-> 维护和使用开发的组件库
-> 模块化前端项目
-> 服务器部署前是否压缩？流程如何简化
+  维护和使用开发的组件库
+  模块化前端项目
+  服务器部署前是否压缩？流程如何简化
+
 
 它不仅是一个工具，而且也是一个工作流。它由三种核心工具组成，致力于提高你构建Web App时的生产力和满意度，分别是：
 - **[Yo](https://github.com/yeoman/yo)** ：脚手架工具，用于搭建新应用的脚手架，编写你的Grunt配置，提交相关Grunt任务，创建你需要的Bower库依赖
@@ -111,7 +113,11 @@ grunt        #部署构建你的应用
 ```
 
 **4 持续集成平台-Travis** 
+
+Travis是一个持续集成(CI)平台
+
 **5 线上部署应用-Heroku**
+
 Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
 
 一.  常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
