--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -6,11 +6,16 @@
 * **安装搜狗输入法**
 * **远程管理Ubuntu主机**
 * **基础软件推荐使用**
-1. WPS for Linux 
-2. Smplayer+VLC
-3. Google Chrome+Chrome App Launcher
-4. Xmind思维导图
-5. 其他软件
+
+1 WPS for Linux 
+
+2 Smplayer+VLC
+
+3 Google Chrome+Chrome App Launcher
+
+4 Xmind思维导图
+
+5 其他软件
 
 
 
@@ -21,7 +26,7 @@
 * **安装GAE**
 * **解决Sublime text3无法输入中文的问题**
 * **安装Eclipse**
-
+* **Docker使用入门**
 * **Node.js开发部署集成测试管理**
 
 **1 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
@@ -47,9 +52,12 @@ charles@charles-t400s:~$ npm --version
 
 它能够解决哪些前端问题呢？
 > 统一开发团队代码风格和开发规范
-  维护和使用开发的组件库
-  模块化前端项目
-  服务器部署前是否压缩？流程如何简化
+
+> 维护和使用开发的组件库
+
+> 模块化前端项目
+
+> 服务器部署前是否压缩？流程如何简化
 
 
 它不仅是一个工具，而且也是一个工作流。它由三种核心工具组成，致力于提高你构建Web App时的生产力和满意度，分别是：
@@ -190,5 +198,5 @@ D. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者
 
 
 * **Python开发管理**
-* **Docker使用入门**
+
 
