--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -26,7 +26,6 @@
 * **安装GAE**
 * **解决Sublime text3无法输入中文的问题**
 * **安装Eclipse**
-* **Docker使用入门**
 * **Node.js开发部署集成测试管理**
 
 **1 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
@@ -195,6 +194,7 @@ D. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者
 
 **6 集大成者：开发测试部署运维自动化-Docker**
 
+参考Lesson 5: [ Docker开发环境配置](https://github.com/charlesxiong/linux-lessons/blob/master/lesson5/5.0.md)
 
 
 * **Python开发管理**
