--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -77,13 +77,14 @@ UUID=911758dc-eba4-4624-abad-c9b4a2b1b3cf none swap sw 0 0
 **4. 安装搜狗输入法**
 
 a. 安装fcitx版本： `sudo apt-get install fcitx`
+
 b. 下载32位或64位的Ubuntu deb版[搜狗输入法](http://pinyin.sogou.com/linux/?r=pinyin)
 
 ---
 
 **5. 远程管理主机**
 
-**A. ssh命令行登陆**
+**A ssh命令行登陆**
 
 a. ubuntu下开启ssh服务
 
@@ -106,7 +107,7 @@ b. Windows下安装ssh客户端
  
 推荐使用XShell+Xftp软件，创建新会话，填写完ip地址、用户名和密码就可登陆你的Ubuntu服务器
 
-**B. 远程界面登陆服务器**
+**B 远程界面登陆服务器**
 
 a. 安装x11vnc： `sudo apt-get install x11vnc`
 
@@ -130,7 +131,7 @@ script
 end script
 ```
 
-- 单次手动启动- x11vnc -forever -shared -rfbauth ~/.vnc/passwd
+- 单次手动启动: `x11vnc -forever -shared -rfbauth ~/.vnc/passwd`
 
 d. 重启ubuntu系统，再在Windows上用vnc viewer登陆
 
@@ -150,16 +151,12 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 > 下载并遵循说明：https://github.com/goagent/goagent/blob/wiki/InstallGuide.md 
 > 1. 让linux上先连上一小时VPN,保证连接gmail邮箱时能访问 
 > 修改local下面的proxy.ini，添加appid-charlesxiong1314 
-> 
 > 2. 运行server下面的文件：python uploader.py 
-> 输入appid，邮箱和密码 
-> 
+> 输入appid，邮箱和密码  
 > 3. linux下在local中运行sudo python proxy.py(保证根管理员权限，添加证书) 
 > 然后在Chrome中导入证书：Settings->HTTPS/SSL->Authorities->Import,导入local下CA.crt,全部勾选,否则会出现Privacy error:Your connection is not private 
-> 
 > 4. 给Chrome安装SwitchySharp扩展 
 > 从local中导入备份文件SwitchyOption.bak,更新自动切换规则(先运行goagent再更新规则)，出现error downloading list一般是上一步证书没导入进去
-> 
 > 5. 开机自动启动
 > 先安装gtk托盘和python-vte
 > ```
@@ -169,7 +166,9 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 > 再在local文件夹下运行python addto-startup.py即可加入开机启动。
 
 - 浏览器：[Google Chrome](http://www.google.cn/intl/zh-CN/chrome/browser/desktop/index.html) + 扩展插件(Proxy SwitchSharp、Vimium、Adblock)+App(安装QQ、微信，特别建议在Windows的Chrome浏览器安装vnc viewer,如下图所示)
+
 ![App launcher](../images/lesson1-0.png)
+
 - 截图工具：shutter(`sudo apt-get install shutter`)
 - 跨平台思维导图： [XMind](http://www.xmind.net/download/linux/)
 - Markdown编辑器： [haroopad](http://pad.haroopress.com/user.html)
