--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -166,7 +166,7 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 > 5. 开机自动启动
 > 先安装gtk托盘和python-vte
 > ```
-> sudo apt-get install python/python-dev/python-gevent
+> sudo apt-get install python python-dev python-gevent
 > sudo apt-get install python-appindicator python-vte
 > ```
 > 再在local文件夹下运行python addto-startup.py即可加入开机启动。
@@ -182,14 +182,62 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 ---
 
 ## 开发环境
-* **完善GCC/Python环境**
-* **配置Vim**
-* **安装GAE**
-* **解决Sublime text3无法输入中文的问题**
-* **安装Eclipse**
-* **Node.js开发部署集成测试管理**
+**1. 完善GCC/Python环境**
 
-**1 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
+- 安装g++编译器
+命令： `sudo apt-get install build-essential`
+build-essential是一套完整的软件包，它提供了编译程序必需的软件包列表信息，包括gcc,libc
+
+- 安装词法和语法分析器
+命令：
+```
+sudo apt-get install flex
+sudo apt-get install bison
+```
+
+---
+
+**2. 配置Vim**
+
+参考ma6174的[超强vim配置文件](https://github.com/ma6174/vim)，一键安装非常快速，省去了不少配置时间，参考运行截图：
+
+![vim](../images/lesson1-1.png)
+
+```
+wget -qO- https://raw.github.com/ma6174/vim/master/setup.sh | sh
+```
+
+
+主要是掌握它的快捷键命令：
+- 多窗口操作
+  - :sp + 文件名水平分割窗口
+  - :vs + 文件名垂直分割窗口
+  - Ctrl+w快速切换窗口
+  
+- Taglist和NerdTree
+  - F3：快速打开或关闭树形目录
+  - F9：查看当前代码结构及自动补全
+
+- 其他
+  - F5：一键运行程序
+  - F6：代码格式化
+  - F8：调试C和C++
+  - F2：去除代码中的空行(个人觉得不实用)
+
+
+---
+
+**3. 安装Sublime text3**
+
+---
+
+**4. 安装Eclipse**
+
+--- 
+
+**5. Node.js开发管理**
+
+**A 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
 
 ```
    tar -zxvf node-latest.tar.gz 
@@ -206,7 +254,7 @@ v0.10.33
 charles@charles-t400s:~$ npm --version
 1.4.28
 ```
-**2  Yeoman & Grunt & Bower**
+**B  Yeoman、Grunt和Bower**
 
 **[Yeoman](http://yeoman.io/)** : 使用Web开发的最佳实践方式，为开发者提供一系列健壮的工具、程序库和工作流，帮助他们快速构建出漂亮、引人注目的Web应用。
 
@@ -251,16 +299,16 @@ http://gruntjs.com/getting-started
 # Jasmine不依赖于其他任何JavaScript组件，有干净清晰的语法，可以很简单的写出测试代码。
 sudo npm install grunt --save-dev
 ```
-**3 创建一个Angular Web项目**
+**C 创建一个Angular Web项目**
 
-A. 安装生成器和搭建脚手架
+a. 安装生成器和搭建脚手架
 ```
 sudo apt-get install ruby ruby-compass # root模式下安装ruby和compass
 sudo npm install -g generator-angular #安装angular生成器
 mkdir angular-hello  #创建项目文件夹
 yo angular webapp   # 搭建一个AngularJs应用程序的脚手架
 ```
-B. 安装库依赖- npm,bower
+b. 安装库依赖- npm,bower
 ```
 rm -rf node-modules/  #上面步骤有部分库没装成功，需要root权限，因而需重新安装
 sudo npm install   #安装默认依赖
@@ -272,7 +320,7 @@ bower install && bower install underscore #根据所需从bower中安装库
 bower install --save-dev xxx
 ```
 
-C. Grunt自动化任务
+c. Grunt自动化任务
 ```
 sudo npm install grunt --save-dev   #把新版Grunt到你的项目中，并自动添加到你的项目依赖
 grunt test   #测试你的应用
@@ -280,23 +328,23 @@ grunt serve  #预览你的应用
 grunt        #部署构建你的应用
 ```
 
-**4 持续集成平台-Travis** 
+**D 持续集成平台-Travis** 
 
 Travis是一个持续集成(CI)平台
 
-**5 线上部署应用-Heroku**
+**E 线上部署应用-Heroku**
 
 Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
 
 一.  常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
 
-A. 注册Heroku，下载Heroku工具包：
+a. 注册Heroku，下载Heroku工具包：
 
 ```
 wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
 ```
 
-B. 登陆Heroku并在项目目录执行：
+b. 登陆Heroku并在项目目录执行：
 ```
 charles@charles-t400s:~/node-hello$ heroku login
 Enter your Heroku credentials.
@@ -311,7 +359,7 @@ Git remote heroku added
 
 ```
 
-C. 创建一个Procfile并把本地的master分支推送到heroku这个远端地址
+c. 创建一个Procfile并把本地的master分支推送到heroku这个远端地址
 
 Profile的内容：
 ```
@@ -348,15 +396,16 @@ To https://git.heroku.com/hidden-inlet-5897.git
  * [new branch]      master -> master
 ```
 
-D. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者执行`heroku open`
+d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者执行`heroku open`
 
 
 二. 部署一个Yeoman/Angular App到Heroku中
 
-**6 集大成者：开发测试部署运维自动化-Docker**
+**F 集大成者：开发测试部署运维自动化-Docker**
 
-参考Lesson 5: [ Docker开发环境配置](https://github.com/charlesxiong/linux-lessons/blob/master/lesson5/5.0.md)
+参考Lesson 5: [Docker开发环境配置](https://github.com/charlesxiong/linux-lessons/blob/master/lesson5/5.0.md)
 
+---
 
 * **Python开发管理**
 
