--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -181,8 +181,8 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 
 ---
 
-## 开发环境
-**1. 完善GCC/Python环境**
+# 开发环境
+## **1 完善GCC/Python环境**
 
 - 安装g++编译器
 命令： `sudo apt-get install build-essential`
@@ -198,7 +198,7 @@ sudo apt-get install bison
 
 ---
 
-**2. 配置Vim**
+## **2 配置Vim**
 
 参考ma6174的[超强vim配置文件](https://github.com/ma6174/vim)，一键安装非常快速，省去了不少配置时间，参考运行截图：
 
@@ -207,7 +207,6 @@ sudo apt-get install bison
 ```
 wget -qO- https://raw.github.com/ma6174/vim/master/setup.sh | sh
 ```
-
 
 主要是掌握它的快捷键命令：
 - 多窗口操作
@@ -228,7 +227,7 @@ wget -qO- https://raw.github.com/ma6174/vim/master/setup.sh | sh
 
 ---
 
-**3. 安装Sublime text3**
+## **3 安装Sublime text3**
 
 a. 添加Sublime Text3的安装源，执行更新、安装
 
@@ -345,7 +344,7 @@ open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen(
 ---
 
 
-**4. 安装Eclipse**
+## **4 安装Eclipse**
 
 **A 安装JRE(注：使用对应的JDK也可以)**
 
@@ -503,7 +502,7 @@ java -cp ./lib/stdlib.jar:./src/ BinarySearch args0 args1 <(>) xxx
 
 --- 
 
-**5. Node.js开发管理**
+## **5 Node.js开发管理**
 
 **A 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
 
@@ -601,13 +600,54 @@ grunt        #部署构建你的应用
 
 **D 持续集成平台-Travis和覆盖率测试** 
 
-Travis是一个持续集成(CI)平台
+Travis是一个持续集成(CI)平台,这样的平台可以提供不同的版本运行环境，例如Node.js程序，可以运行不同的Node.js版本检测有没有兼容性问题，这种比手动切换node版再跑一次要方便很多
+
+一般来说travis每次跑测试，都会提供一个基本的Linux环境，如build-essential、wget、git等基础默认依赖，一旦你的应用在travis平台跑通后，就不需担心别的用户安装不上了。
+
+Github项目连接travis的基本步骤：
+
+a. 注册Travis(以Github用户登陆)，选择你需要开启集成测试的仓库或者在你的仓库下`Settings - Webhooks & Services - Services`,选择添加Travis CI服务
+
+服务拿到授权后，每当你push代码到github上，travis会自动帮你跑测试
+
+b. 构建配置信息`.travis.yml`,放在项目根目录下，由它决定你的测试该怎么运行。是用`npm test` 还是`make test` 还是`jake test`(以node-hello程序为例)
+
+一个简单的`.travis.yml`文件，如下：
+```
+language: node_js
+node_js:
+	- '0.11'
+	- '0.10'
+	- '0.8'
+	
+before_install:
+    - npm install -g yo bower grunt-cli 
+
+services:
+    - mongodb
+	
+script: make test
+```
+
+c. 项目代码push到仓库后，travis就会被触发了
+
+它要做以下事情：
+1. Travis会使用三个不同node.js版本运行程序
+
+2. 机器在完成安装后，会进入项目目录，根据脚本首先需要安装全局依赖，然后再根据`package.json`执行`npm install`来安装依赖
+
+3. 执行我们指定的测试脚本
+
+4. 如果测试通过，返回码会是0，否则测试有不通过的case,返回码不会为0，测试失败。把Travis上面显示项目目前的测试通过状态的图片添加到项目的README中，如
+```
+[![build status](https://travis-ci.org/charlesxiong/node-hello.svg?branch=master)](https://travis-ci.org/charlesxiong/node-hello/)
+```
 
 **E 线上部署应用-Heroku、Appfog**
 
 Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
 
-一.  常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
+A. 常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
 
 a. 注册Heroku，下载Heroku工具包：
 
@@ -670,7 +710,7 @@ To https://git.heroku.com/hidden-inlet-5897.git
 d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者执行`heroku open`
 
 
-二. 部署一个Yeoman/Angular App到Heroku中
+B. 部署一个Yeoman/Angular App到Heroku中
 
 **F 集大成者：开发测试部署运维自动化-Docker**
 
@@ -678,6 +718,6 @@ d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者
 
 ---
 
-* **Python开发管理**
+## **6 Python开发管理**
 
 
