--- a/lesson1/1.0.md
+++ b/lesson1/1.0.md
@@ -2,8 +2,8 @@
 
 ---
 
-## 基础配置
-**1. 更新软件源**
+# 基础配置
+## **1 更新软件源**
 
 装好ubuntu的第一件事就是添加更快速的源，因为官方提供的源服务器在国外,访问和下载速度要比国内源慢些，可以采用一些国内公司和大学提供的更新源.
 
@@ -17,7 +17,7 @@
 
 - - - 
 
-**2. linux打开txt文件乱码**
+## **2 linux打开txt文件乱码**
 
 缺省配置下，用Ubuntu的文本编辑器（gedit）打开GB18030（繁体中文用户可将GB18030替换成BIG5或BIG5-HKSCS）类型的中文编码文本文件时会发生乱码。这是因为gedit使用一个编码匹配列表，只有在这个列表中的编码才会进行匹配，不在这个列表中的编码将显示为乱码。您要做的就是将 GB18030 加入这个匹配列表。
 
@@ -49,7 +49,7 @@ gsettings set org.gnome.gedit.preferences.encodings auto-detected "['GB18030', '
 
 - - -
 
-**3. 开机自动加载Windows分区**
+## **3 开机自动加载Windows分区**
 
 a. 在root权限下查看分区： `fdisk -l`
 
@@ -77,7 +77,7 @@ UUID=911758dc-eba4-4624-abad-c9b4a2b1b3cf none swap sw 0 0
 
 ---
 
-**4. 安装搜狗输入法**
+## **4 安装搜狗输入法**
 
 a. 安装fcitx版本： `sudo apt-get install fcitx`
 
@@ -85,9 +85,9 @@ b. 下载32位或64位的Ubuntu deb版[搜狗输入法](http://pinyin.sogou.com/
 
 ---
 
-**5. 远程管理主机**
+## **5 远程管理主机**
 
-**A ssh命令行登陆**
+### **5.1 ssh命令行登陆**
 
 a. ubuntu下开启ssh服务
 
@@ -110,7 +110,7 @@ b. Windows下安装ssh客户端
  
 推荐使用XShell+Xftp软件，创建新会话，填写完ip地址、用户名和密码就可登陆你的Ubuntu服务器
 
-**B 远程界面登陆服务器**
+### **5.2 远程界面登陆服务器**
 
 a. 安装x11vnc： `sudo apt-get install x11vnc`
 
@@ -146,7 +146,7 @@ x11vnc -kill :1 杀掉1号端口的vnc server进程
 
 ---
 
-**6. 基础软件**
+## **6 基础软件**
 
 由于平时开发主要在Ubuntu平台上，所以一般首先考虑软件的跨平台性，下面是个人经常使用的软件：
 
@@ -229,7 +229,7 @@ wget -qO- https://raw.github.com/ma6174/vim/master/setup.sh | sh
 
 ## **3 安装Sublime text3**
 
-a. 添加Sublime Text3的安装源，执行更新、安装
+### 3.1 添加Sublime Text3的安装源，执行更新、安装
 
 ```
 sudo add-apt-repository ppa:webupd8team/sublime-text-3
@@ -237,7 +237,7 @@ sudo apt-get update
 sudo apt-get install sublime-text
 ```
 
-b. 解决sublime text3无法输入中文的问题
+### 3.2 解决sublime text3无法输入中文的问题
 
 - 安装C/C++的编译环境和gtk、libgtk2.0-dev
 
@@ -320,7 +320,7 @@ OnlyShowIn=Unity;
 
 修改以上三处代码，保存。Sublime Text 3即可完全正常使用搜狗输入法输入中文
 
-c. 安装Package Control和一些常用的插件
+### 3.3 安装Package Control和一些常用的插件
 
 - 安装Package Control
 使用Ctrl+~快捷键，输入下面一段代码：
@@ -346,7 +346,7 @@ open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen(
 
 ## **4 安装Eclipse**
 
-**A 安装JRE(注：使用对应的JDK也可以)**
+### **4.1 安装JRE(注：使用对应的JDK也可以)**
 
 a. 下载对应的[JRE版本](http://java.com/en/download/manual.jsp)，假定是jre1.7
 
@@ -418,7 +418,7 @@ CLASSPATH=.;%JAVA_HOME%\lib\dt.jar;%JAVA_HOME%\lib\tools.jar;
  java xxx args0 args1 args2
 ```
 
-**B 安装Eclipse**
+### **4.2 安装Eclipse**
 
 a. 下载最新的[Eclipse版本](http://www.eclipse.org/downloads/)
 
@@ -457,7 +457,7 @@ CPP_INCLUDE_PATH 设为 /usr/include/c++/4.8.2
 ```
 
 
-**C 命令行编译运行Java程序**
+### **4.3 命令行编译运行Java程序**
 
 a. 编译生成二进制的class文件，生成xxx.class： javac xxx.java 
 
@@ -498,13 +498,13 @@ java -cp ./lib/stdlib.jar:./src/ BinarySearch args0 args1 <(>) xxx
 ```
 
 
-**C Gradle自动化构建简单实例**
+### **4.4 Gradle自动化构建简单实例**
 
 --- 
 
 ## **5 Node.js开发管理**
 
-**A 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
+### **5.1 源码安装[Node.js](http://nodejs.org/dist/node-latest.tar.gz)**
 
 ```
 tar -zxvf node-latest.tar.gz 
@@ -522,7 +522,7 @@ v0.10.33
 charles@charles-t400s:~$ npm --version
 1.4.28
 ```
-**B  Yeoman、Grunt和Bower**
+### **5.2  Yeoman、Grunt和Bower**
 
 **[Yeoman](http://yeoman.io/)** : 使用Web开发的最佳实践方式，为开发者提供一系列健壮的工具、程序库和工作流，帮助他们快速构建出漂亮、引人注目的Web应用。
 
@@ -569,7 +569,7 @@ Karma是一个基于Node.js的JavaScript测试执行过程管理工具（Test Ru
 
 Jasmine是一款 JavaScript BDD（行为驱动开发）测试框架,它不依赖于其他任何JavaScript组件，有干净清晰的语法，可以很简单的写出测试代码。
 
-**C 创建一个Angular Web项目**
+### **5.3 创建一个Angular Web项目**
 
 a. 安装生成器和搭建脚手架
 ```
@@ -598,7 +598,7 @@ grunt serve  #预览你的应用
 grunt        #部署构建你的应用
 ```
 
-**D 持续集成平台-Travis和覆盖率测试** 
+### **5.4 持续集成平台-Travis和覆盖率测试-Coveralls** 
 
 Travis是一个持续集成(CI)平台,这样的平台可以提供不同的版本运行环境，例如Node.js程序，可以运行不同的Node.js版本检测有没有兼容性问题，这种比手动切换node版再跑一次要方便很多
 
@@ -643,11 +643,11 @@ c. 项目代码push到仓库后，travis就会被触发了
 [![build status](https://travis-ci.org/charlesxiong/node-hello.svg?branch=master)](https://travis-ci.org/charlesxiong/node-hello/)
 ```
 
-**E 线上部署应用-Heroku、Appfog**
+### **5.5 线上部署应用-Heroku、Appfog**
 
 Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
 
-A. 常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单
+**A. 常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单**
 
 a. 注册Heroku，下载Heroku工具包：
 
@@ -710,9 +710,9 @@ To https://git.heroku.com/hidden-inlet-5897.git
 d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者执行`heroku open`
 
 
-B. 部署一个Yeoman/Angular App到Heroku中
+**B. 部署一个Yeoman/Angular App到Heroku中**
 
-**F 集大成者：开发测试部署运维自动化-Docker**
+### **5.6 集大成者：开发测试部署运维自动化-Docker**
 
 参考Lesson 5: [Docker开发环境配置](https://github.com/charlesxiong/linux-lessons/blob/master/lesson5/5.0.md)
 
