--- a/linux_lessons/0.1.md
+++ b/linux_lessons/0.1.md
@@ -1,190 +1,11 @@
-# 安装Ubuntu 14.10后要做的几件事
+# 安装Ubuntu 14.10后要做的几件事(上)　-　基础软件篇
 
 ---
 
-# 基础配置
-## **1 更新软件源**
-
-装好ubuntu的第一件事就是添加更快速的源，因为官方提供的源服务器在国外,访问和下载速度要比国内源慢些，可以采用一些国内公司和大学提供的更新源.
-
-方法一：  在`System Settings -> Software & Updates`,在`Download from`中在中国区选择速度最快的服务器源。这种方法比使用命令行快很多。
-
-方法二：命令行设置：
-- 备份原有源,恢复时有用 `sudo cp /etc/apt/sources.list /etc/apt/sources.list.backup`
-- 修改更新源，添加相应的镜像源(个人常用163源、yun-idc源) ` sudo gedit /etc/apt/sources.list`
-- 更新源`sudo apt-get update` 然后再升级系统`sudo apt-get upgrade`
-
-
-- - - 
-
-## **2 linux打开txt文件乱码**
-
-缺省配置下，用Ubuntu的文本编辑器（gedit）打开GB18030（繁体中文用户可将GB18030替换成BIG5或BIG5-HKSCS）类型的中文编码文本文件时会发生乱码。这是因为gedit使用一个编码匹配列表，只有在这个列表中的编码才会进行匹配，不在这个列表中的编码将显示为乱码。您要做的就是将 GB18030 加入这个匹配列表。
-
-- Gedit 2.x版本设置（适用于Ubuntu 11.04及以前）
-
-安装gconf-editor： `sudo apt-get install gconf-editor`
-
-手动方式：
-在弹出的配置中选择：“apps”—“gedit2”—“preferences”—“encodings”。双击右边名称“auto-    detected”，在弹出的编辑键菜单中，添加编码GB18030，GBK，GB2312，移到最上面即可                         
-
-命令行方式： 
-```
-gconftool-2 --set --type=list --list-type=string /apps/gedit-2/preferences/encodings/auto_detected
-"[UTF-8,CURRENT,GB18030,ISO-8859-15,UTF-16]"
-```
-
-- Gedit 3.x版本设置（适用于Ubuntu 11.10及以后）
-
-安装dconf-editor: `sudo apt-get install dconf-tools`
-
-手动方式：
-步骤类似，在org/gnome/gedit/preferences/encodings下添加中文编码方式
-
-命令行方式:
-```
-gsettings set org.gnome.gedit.preferences.encodings auto-detected "['GB18030', 'UTF-8', 'CURRENT', 'ISO-8859-15', 'UTF-16']"
-```
-
-
-- - -
-
-## **3 开机自动加载Windows分区**
-
-a. 在root权限下查看分区： `fdisk -l`
-
-b. 统计windows分区，执行如下命令
-   `sudo mkdir -p /media/charles/{windows分区名字}`
-
-c. 编辑描述各种文件系统信息的文件/etc/fstab,添加对应Windows分区信息： `sudo gedit /etc/fstab`
-
-```
-# <file system> <mount point> <type> <options> <dump> <pass>
-# / was on /dev/sda6 during installation
-UUID=df8a06fe-6507-4242-80bc-85db21b15c9b / ext4 errors=remount-ro 0 1
-# swap was on /dev/sda5 during installation
-UUID=911758dc-eba4-4624-abad-c9b4a2b1b3cf none swap sw 0 0
-
-# reserved partition
-/dev/sda1 /media/charles/reserc ntfs none 0 0
-
-# windows partition
-/dev/sda2 /media/charles/winc ntfs none 0 0
-
-# work partition
-/dev/sda3 /media/charles/work ntfs none 0 0
-```
-
----
-
-## **4 安装搜狗输入法**
-
-a. 安装fcitx版本： `sudo apt-get install fcitx`
-
-b. 下载32位或64位的Ubuntu deb版[搜狗输入法](http://pinyin.sogou.com/linux/?r=pinyin)
-
----
-
-## **5 远程管理主机**
-
-### **5.1 ssh命令行登陆**
-
-a. ubuntu下开启ssh服务
-
-安装ssh服务器： `sudo apt-get install openssh-server`
-查看ssh服务是否在后台开启，出现了sshd字样表示ssh后台服务默认已开启
-```
-charles@charles-t400s:~$ ps -e | grep ssh
-10588 ?        00:00:00 sshd
-```
-
-你的服务器也可以是Mac或者Windows，只需要安装ssh服务器，并开启ssh后台服务即可
-
-b. Windows下安装ssh客户端 
-
-- [secure shell client](http://www.wm.edu/offices/it/services/software/licensedsoftware/webeditingsftp/sshsecureshell/index.php)：免费开源，但中文显示乱码，无法传输中文乱码名的文件，不能记住密码
-
-- [putty](http://www.putty.org/) : 占用内存最小，每次登陆时需要重新连接，可通过设置编码为UTF-8不会显示中文乱码
-
-- **[Xshell和Xftp](http://www.netsarang.com/download/free_license.html)**: 商用软件，但有免费版，可以保存设置的登陆会话，能记住密码，传输文件和显示中文时都可以通过设置编码为UFT-8而不会产生乱码，效果最佳。
- 
-推荐使用XShell+Xftp软件，创建新会话，填写完ip地址、用户名和密码就可登陆你的Ubuntu服务器
-
-### **5.2 远程界面登陆服务器**
-
-a. 安装x11vnc： `sudo apt-get install x11vnc`
-
-b. 设置vnc连接密码，根据提示输入密码并保存：
-```
-charles@charles-t400s:~$ x11vnc -storepasswd
-Enter VNC password: 
-Verify password:    
-Write password to /home/charles/.vnc/passwd?  [y]/n y
-Password written to: /home/charles/.vnc/passwd
-```
-c. 启动vncserver:
-
-- 后台自动启动
-   1. `sudo cp ~/.vnc/passwd /etc/x11vnc.pass`
-   2. 创建/etc/init/x11vnc.conf文件，内容如下：
-```
-start on login-session-start
-script
-       x11vnc -display :0 -auth /var/run/lightdm/root/:0 -forever -bg -o /var/log/x11vnc.log -rfbauth /etc/x11vnc.pass -rfbport 5900  
-end script
-```
-
-- 单次手动启动: `x11vnc -forever -shared -rfbauth ~/.vnc/passwd`
-
-d. 重启ubuntu系统，再在Windows上用vnc viewer登陆
-
-输入VNC Server名字-IP地址：端口号，后再输入设置vnc的连接密码
-
-e. x11vnc常用命令(待补充)
-
-x11vnc -kill :1 杀掉1号端口的vnc server进程
-
----
-
-## **6 基础软件**
-
-由于平时开发主要在Ubuntu平台上，所以一般首先考虑软件的跨平台性，下面是个人经常使用的软件：
-
-- 办公软件： [WPS for Linux](http://community.wps.cn/download/) + Ocular阅读器
-- 影音播放： Audacious + VLC + [SMPlayer](http://smplayer.sourceforge.net/en/downloads)结合使用
-- 你懂的: [GAE](https://github.com/goagent/goagent) 
-> 下载并遵循说明：https://github.com/goagent/goagent/blob/wiki/InstallGuide.md 
->
-> 1. 让linux上先连上一小时VPN,保证连接gmail邮箱时能访问 
-> 修改local下面的proxy.ini，添加appid-charlesxiong1314 
-> 2. 运行server下面的文件：python uploader.py 
-> 输入appid，邮箱和密码  
-> 3. linux下在local中运行sudo python proxy.py(保证根管理员权限，添加证书) 
-> 然后在Chrome中导入证书：Settings->HTTPS/SSL->Authorities->Import,导入local下CA.crt,全部勾选,否则会出现Privacy error:Your connection is not private 
-> 4. 给Chrome安装SwitchySharp扩展 
-> 从local中导入备份文件SwitchyOption.bak,更新自动切换规则(先运行goagent再更新规则)，出现error downloading list一般是上一步证书没导入进去
-> 5. 开机自动启动
-> 先安装gtk托盘和python-vte
-> ```
-> sudo apt-get install python python-dev python-gevent
-> sudo apt-get install python-appindicator python-vte
-> ```
-> 再在local文件夹下运行python addto-startup.py即可加入开机启动。
-
-- 浏览器：[Google Chrome](http://www.google.cn/intl/zh-CN/chrome/browser/desktop/index.html) + 扩展插件(Proxy SwitchSharp、Vimium、Adblock)+App(安装QQ、微信，特别建议在Windows的Chrome浏览器安装vnc viewer,如下图所示)
-
-![App launcher](../images/lesson1-0.png)
-
-- 截图工具：shutter(`sudo apt-get install shutter`)
-- 跨平台思维导图： [XMind](http://www.xmind.net/download/linux/)
-- Markdown编辑器： [haroopad](http://pad.haroopress.com/user.html)
-
----
-
-# 开发环境
-## **1 完善GCC/Python环境**
+# **1 完善GCC环境**
 
 - 安装g++编译器
+
 命令： `sudo apt-get install build-essential`
 build-essential是一套完整的软件包，它提供了编译程序必需的软件包列表信息，包括gcc,libc
 
@@ -196,29 +17,38 @@ sudo apt-get install flex
 sudo apt-get install bison
 ```
 
+- 如果想在ubutun 14.10的64位系统上编译32位程序
+
+命令:
+```
+sudo apt-get install g++-multilib
+g++ -m32 -o xxx xxx.cpp //-m32选项将程序编译成32位的应用
+```
+
 ---
 
 ## **2 配置Vim**
 
 参考ma6174的[超强vim配置文件](https://github.com/ma6174/vim)，一键安装非常快速，省去了不少配置时间，参考运行截图：
 
-![vim](../images/lesson1-1.png)
+![vim](http://images.cnitblog.com/blog/678327/201501/081757578128184.png)
+
 
 ```
 wget -qO- https://raw.github.com/ma6174/vim/master/setup.sh | sh
 ```
 
 主要是掌握它的快捷键命令：
-- 多窗口操作
+a. 多窗口操作
   - :sp + 文件名水平分割窗口
   - :vs + 文件名垂直分割窗口
   - Ctrl+w快速切换窗口
   
-- Taglist和NerdTree
+b. Taglist和NerdTree
   - F3：快速打开或关闭树形目录
   - F9：查看当前代码结构及自动补全
 
-- 其他
+c. 其他
   - F5：一键运行程序
   - F6：代码格式化
   - F8：调试C和C++
@@ -248,7 +78,8 @@ sudo apt-get install libgtk2.0-dev
 
 - 保存以下代码到文件sublime_imfix.c
 
-```C++
+
+```
 #include <gtk/gtkimcontext.h>
 void gtk_im_context_set_client_window (GtkIMContext *context,
           GdkWindow    *window)
@@ -271,11 +102,13 @@ void gtk_im_context_set_client_window (GtkIMContext *context,
 
 - 编译成共享库
 
+
 ```
 gcc -shared -o libsublime-imfix.so sublime_imfix.c  `pkg-config --libs --cflags gtk+-2.0` -fPIC
 ```
 
 - 拷贝到/opt/sublime_text目录下
+
 注意：/opt/sublime_text/不同版本可能有所不同，请调整为自己安装版本的路径
 
 ```
@@ -322,7 +155,7 @@ OnlyShowIn=Unity;
 
 ### 3.3 安装Package Control和一些常用的插件
 
-- 安装Package Control
+a. 安装Package Control
 使用Ctrl+~快捷键，输入下面一段代码：
 
 ```
@@ -333,7 +166,7 @@ open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen(
 'http://sublime.wbond.net/' + pf.replace(' ','%20')).read())
 ```
 
-- 使用Ctrl+Shift+P输入Install Package,安装以下插件
+b. 使用Ctrl+Shift+P输入Install Package,安装以下插件
    - 解决中文乱码：GBK Encoding Support(如果文件的编码方式不被sublime text支持，需要再安装Codecs33 package,一般问题就解决了)，ConvertToUTF8(在创建html文件时有干扰)
    - 阅读源代码: ctags(需要先安装ctags)
    - 快速开发Web前端代码：Emmet
@@ -443,11 +276,9 @@ Eclipse下文件的编码方式：Win下默认为gbk,Linux下默认为utf-8。
 在Help->Eclipse Marketplace中找到Color theme plugin，下载安装 。在Window->General->Color Theme中，任选一个主题，个人比较喜欢sublime Text 2
 
 - 比较好用的插件
-  - ExploreFS ：右键打开文件位置
-  - Pydev 
-  - [dev-utils](http://marketplace.eclipse.org/content/devutils#.Uz-aF1SSw38) 
-  - CDT
- 
+   
+ExploreFS(右键打开文件位置)、Pydev 、CDT、[dev-utils](http://marketplace.eclipse.org/content/devutils#.Uz-aF1SSw38) 
+  
 如果C\++程序编译时出现无法解析头文件等情况，显示 Unresolved inclusion 。尽管不影响编译，却无法定位头文件中的符号。
 
   它的原因是没有指定Eclipse的C和C\++的目录，可以通过设定Eclipse中 C_INCLUDE_PATH 和 CPP_INCLUDE_PATH 两个环境变量指定头文件目录。 在 `Window -> Preferences -> C/C++ -> Environment` 中添加这两个变量(其中4.8.2是gcc的版本，用gcc --version可以获得)：
@@ -481,15 +312,15 @@ c. 带参数的命令行
  
 - 重定向标准输入
 
-以读取data.txt作为标准输入流:`java classname < data.txt`
+以读取data.txt作为标准输入流- `java classname < data.txt`
 
 - 重定向标准输出
 
-将标准输出流写入data.txt中: `java classname > data.txt`
+将标准输出流写入data.txt中- `java classname > data.txt`
 
 - 管道
 
-将程序的输出流重定向为另外一个程序的输出流: `java class1 args0 | java class2`
+将程序的输出流重定向为另外一个程序的输出流- `java class1 args0 | java class2`
 
 如果Javac和Java命令均需要引用jar包呢 ？ 例如project项目里面有lib下的jar包，src下的源码文件，想编译并运行src下的文件，只需在project目录下运行如下命令：
 ```
@@ -528,11 +359,8 @@ charles@charles-t400s:~$ npm --version
 
 它能够解决哪些前端问题呢？
 > 统一开发团队代码风格和开发规范
-
 > 维护和使用开发的组件库
-
 > 模块化前端项目
-
 > 服务器部署前是否压缩？流程如何简化
 
 
@@ -600,9 +428,7 @@ grunt        #部署构建你的应用
 
 ### **5.4 持续集成平台-Travis和覆盖率测试-Coveralls** 
 
-Travis是一个持续集成(CI)平台,这样的平台可以提供不同的版本运行环境，例如Node.js程序，可以运行不同的Node.js版本检测有没有兼容性问题，这种比手动切换node版再跑一次要方便很多
-
-一般来说travis每次跑测试，都会提供一个基本的Linux环境，如build-essential、wget、git等基础默认依赖，一旦你的应用在travis平台跑通后，就不需担心别的用户安装不上了。
+Travis是一个持续集成(CI)平台,这样的平台可以提供不同的版本运行环境，例如Node.js程序，可以运行不同的Node.js版本检测有没有兼容性问题，这种比手动切换node版再跑一次要方便很多。一般来说travis每次跑测试，都会提供一个基本的Linux环境，如build-essential、wget、git等基础默认依赖，一旦你的应用在travis平台跑通后，就不需担心别的用户安装不上了。
 
 Github项目连接travis的基本步骤：
 
@@ -647,7 +473,7 @@ c. 项目代码push到仓库后，travis就会被触发了
 
 Heroku是一种Pass平台，目前支持多种语言环境，无需你配置服务器，数据库，也不需要理会负载均衡，一切都可在平台上直接获取。你只需专注于自己的业务，把应用的逻辑写好，部署到线上，非常适合开发一些demo Web应用。
 
-**A. 常规Node.js App,例如**[Node-hello](https://github.com/charlesxiong/node-hello)** ,部署稍微简单**
+**A. 常规Node.js App,例如[Node-hello](https://github.com/charlesxiong/node-hello)部署稍微简单**
 
 a. 注册Heroku，下载Heroku工具包：
 
@@ -710,7 +536,7 @@ To https://git.heroku.com/hidden-inlet-5897.git
 d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者执行`heroku open`
 
 
-**B. 部署一个Yeoman/Angular App到Heroku中**
+**B. 部署一个Angular App到Heroku中**
 
 ### **5.6 集大成者：开发测试部署运维自动化-Docker**
 
@@ -720,4 +546,4 @@ d. 查看发布的应用网址：https://hidden-inlet-5897.herokuapp.com/ 或者
 
 ## **6 Python开发管理**
 
-
+---
