--- a/tech_interview_notes/3_网络协议与网络编程.md
+++ b/tech_interview_notes/3_网络协议与网络编程.md
@@ -1,6 +1,5 @@
+
 ---
-
-
 # 1 TCP/IP协议
 ## 1.1 TCP和UDP的比较
 UDP(User Datagram Protocol): 用户数据报协议，无连接协议(UDP客户与服务器不存在长期的关系)
@@ -13,6 +12,58 @@ TCP(Transmission Control Protocol): 传输控制协议,面向连接的协议,提
 (3) TCP提供流量控制，它总是告诉对端能够接受多少字节的数据,确保发送端发送的数据不会溢出接收缓冲区;UDP不提供流量控制
 (4) UDP在某些方面很高效，如UDP对系统资源要求较少、具有较好的实时性和网络开销小的特点。若程序需要尽快地传输尽可能多的信息，可以使用UDP
 
+## 1.2 TCP的连接建立与释放
+
+
+1 三次握手建立TCP连接的过程
+问题： 为什么不可以二次握手
+一: 采取三次握手是为了防止失效的连接请求报文段突然又传送到服务器而发生错误
+二是如果Client端发送的连接因为网络延迟晚到了服务器，服务器以为又是客户端发起的新连接，于是建立连接并发回确认，但客户端此时并不确认，服务器就一直等待发送数据，导致服务器的资源浪费(SYN攻击)
+
+2 四次挥手释放连接的过程
+问： 为什么要四次挥手
+原因：发送FIN报文是为了通知我已经没有数据给你了，也就是说只是关闭了一端到一端的数据传输，另外一端并未有关闭。因而保证双向的数据传输都关闭了，两端均需要发送一次FIN报文，然后需要一次确认(注意也可以选择ACK与FIN报文合并为一个报文段，仍为四次挥手，但只需要3个报文段)
+
+3 为什么存在TIME_WAIT状态
+如果最终的ACK丢失，Server端必须重发FIN,所以Client必须要维护TCP状态信息以便可以重发最终的ACK,否则就会发送RST,server会认为发生错误(Client可能会面临不得不重发最终Ack的情形)
+
+可靠地实现TCP全双工连接的终止
+
+问： 为什么要保持2MSL的时间
+允许老的重复分节在网络中消逝
+如果TIME_WAIT状态保持时间不够长，第一个连接就正常终止了，第二个连接出现时但网络中还存在第一个连接的重复报文，干扰了第二个连接，所以要让该状态保持足够长，连接方向上的TCP报文要么完全响应完毕，要么被丢弃，这样不会混淆
+
+4 TCP与Socket的对应关系
+
+5 TCP的重发机制怎么实现的
+a 滑动窗口机制，建立收发的边界，能让发送方知道已经发送了多少（已确认）、尚未确认的字节数、尚待发送的字节数；让接收方知道（已经确认收到的字节数）。
+b 选择重传，对传输出错的序列进行重传
+
+### 1.2.1 TCP状态转换图
+### 1.2.2 Socket相关的API
+
+## 1.3 TCP的流量控制与拥塞控制
+
+
+## 1.4 HTTP协议
+互联网协议入门（一）： http://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_i.html
+
+理解RESTful架构： 
+http://www.ruanyifeng.com/blog/2011/09/restful.html
+http://www.ruanyifeng.com/blog/2014/05/restful_api.html
+
+## 1.5 HTTPS协议与SSH协议
+
+http://www.guokr.com/post/114121/
+SSH原理与运用（一）：远程登录： http://www.ruanyifeng.com/blog/2011/12/ssh_remote_login.html
+
+图解SSL/TLS协议： http://www.ruanyifeng.com/blog/2014/09/illustration-ssl.html
+
+SSL延迟有多大？：http://www.ruanyifeng.com/blog/2014/09/ssl-latency.html
+
+SSL/TLS协议运行机制的概述： http://www.ruanyifeng.com/blog/2014/02/ssl_tls.html
+
+HTTPS的误解：http://www.ruanyifeng.com/blog/2011/02/seven_myths_about_https.html
 
 ---
 
@@ -21,6 +72,54 @@ TCP(Transmission Control Protocol): 传输控制协议,面向连接的协议,提
 ---
 
 # 3 网络编程与服务器端开发
+
+问: 网络编程的一般步骤
+
+- TCP连接
+Server端： 
+1）创建套接字create
+2）绑定端口号bind
+3）监听连接listen
+4）接受连接请求accept，并返回新的套接字
+5）用新返回的套接字接收和发送审计局recv/send
+6）关闭套接字close
+Client端：
+1）创建套接字create 
+2）发起建立连接请求connect 
+3）发送/接收数据send/recv
+4）关闭套接字close
+
+流程如下:
+Server端：create -- bind -- listen--  accept--  recv/send-- close
+Client端：create------- conncet------send/recv------close
+
+- UDP链接
+  Server端:
+  1）创建套接字create
+  2）绑定端口号bind
+  3）接收/发送消息recvfrom/sendto
+  4）关闭套接字。
+ Client端:
+  1）创建套接字create
+  2）发送/接收消息sendto/recvfrom
+  3）关闭套接字.
+
+流程如下:
+Server端：create----bind ----recvfrom/sendto----close
+Client端：create----  sendto/recvfrom----close.
+
+问: connect方法会阻塞，请问有什么方法可以避免长时间阻塞
+最简单的办法就是设置定时器或者设置为非阻塞的模式(O_NON_BLOCK,轮询方式)
+
+要确保函数线程安全，主要需要考虑的是线程之间的共享变量。属于同一进程的不同线程会共享进程内存空间中的全局区和堆，而私有的线程空间则主要包括栈和寄存器。因此，对于同一进程的不同线程来说，每个线程的局部变量都是私有的，而全局变量、局部静态变量、分配于堆的变量都是共享的。在对这些共享变量进行访问时，如果要保证线程安全，则必须通过加锁的方式。
+
+问: 常见的IO模型有哪些
+
+问: select和epoll的区别
+
+问: 两种高效的事件处理模式
+
+问: 两种高效的并发模式
 
 ---
 
