--- a/tech_interview_notes/3_网络协议与网络编程.md
+++ b/tech_interview_notes/3_网络协议与网络编程.md
@@ -7,10 +7,10 @@ TCP(Transmission Control Protocol): 传输控制协议,面向连接的协议,提
 它们两者都可以使用IPv4或者IPv6,并且两者都可以是全双工的
 
 **区别**:
-(1) TCP面向连接,面向字节流的数据传输;UDP无连接,面向数据报的传输
-(2) TCP提供可靠的数据传输，它通过提供确认、超时重传、序列号等机制，保证数据按序、无差错、不丢失、不重复的收到;UDP不一定提供可靠的数据传输，无法保证数据准确无误的到达目的地
-(3) TCP提供流量控制，它总是告诉对端能够接受多少字节的数据,确保发送端发送的数据不会溢出接收缓冲区;UDP不提供流量控制
-(4) UDP在某些方面很高效，如UDP对系统资源要求较少、具有较好的实时性和网络开销小的特点。若程序需要尽快地传输尽可能多的信息，可以使用UDP
+1. TCP面向连接,面向字节流的数据传输;UDP无连接,面向数据报的传输
+2. TCP提供可靠的数据传输，它通过提供确认、超时重传、序列号等机制，保证数据按序、无差错、不丢失、不重复的收到;UDP不一定提供可靠的数据传输，无法保证数据准确无误的到达目的地
+3. TCP提供流量控制，它总是告诉对端能够接受多少字节的数据,确保发送端发送的数据不会溢出接收缓冲区;UDP不提供流量控制
+4. UDP在某些方面很高效，如UDP对系统资源要求较少、具有较好的实时性和网络开销小的特点。若程序需要尽快地传输尽可能多的信息，可以使用UDP
 
 ## 1.2 TCP的连接建立与释放
 
