--- a/linux_lessons/0.0.md
+++ b/linux_lessons/0.0.md
@@ -12,6 +12,8 @@
 
 方法二：命令行设置：
 - 备份原有源,恢复时有用 `sudo cp /etc/apt/sources.list /etc/apt/sources.list.backup`
+     - test
+     - hello
 - 修改更新源，添加相应的镜像源(个人常用163源、yun-idc源) ` sudo gedit /etc/apt/sources.list`
 - 更新源并升级系统
 ```
